fix size for navbar on mobile

--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -7,8 +7,6 @@
 .navBarLogo{
     font-weight: 400;
     font-size: 34px;
-    /* font-style: normal; */
-    /* color: #141414;  */
     color: rgb(66, 66, 66);
     font-family: 'Poppins', sans-serif;
 }
@@ -49,8 +47,9 @@ a:link{
 }
 @media only screen and (max-width: 600px) {
     .navBarLogo{
-        font-size: 16px;
+        font-size: 18px;
         margin-left: 10px;
+        padding: 15px 0;
     }
     .nav-link{
         font-size: 12px;
