--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -69,7 +69,7 @@
 
 @media only screen and (max-width: 600px) {
   .homeTop{
-    background: url("/images/satellite-1030779_1600x525crop.jpg");
+    /* background: url("/images/satellite-1030779_1600x525crop.jpg"); */
     background-size: cover;
     background-position-x: 490px;
     height: 75vw;
@@ -80,14 +80,14 @@
     top: 37px;
   }
   .homeBanner{
-    color: rgb(41, 41, 41);
+    color: rgb(69, 69, 69);
     font-weight: 600;
     font-size: 36px;
   }
   .homeBannerText{
     font-size: 18px;
     width: 75vw;
-    color: rgb(41, 41, 41,.9);
+    color: rgb(69, 69, 69,.9);
   }
   .contactUsBtn{
     position: relative;
@@ -105,13 +105,13 @@
     top: 60px;
   }
   .homeTitle{
-    font-size: 36px;
+    font-size: 30px;
   }
   .homeText{
     /* margin-top: 25px; */
     font-size: 16px;
     margin: 25px 5px;
-    line-height: 1.8;
+    /* line-height: 1.8; */
   }
 }
 
